--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <title>Allez Cine!</title>
     <meta charset="utf-8">
@@ -8,13 +9,48 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
+    <footer>
+        <div class="row align-center">
 
+        </div>
+        <div class="row">
+            <div class="col-2 offset-1">
+                <h4>RELEASES</h4>
+                <hr>
+                <p>2016</p>
+                <p>2015</p>
+                <p>2014</p>
+                <p>2013</p>
+                <p>2012</p>
+                <p>2011</p>
+            </div>
+            <div class="col-2">
+                <h4 class="titlef">MOVIES</h4>
+                <hr>
+                <p>ADVENTURE</p>
+                <p>COMEDY</p>
+                <p>FANTASY</p>
+                <p>ACTION</p>
+                <p>MOVIES</p>
+                <p>HORROR</p>
+            </div>
+            <div class="col-2">
+                <h4 class="titlef">REVIEW MOVIES</h4>
+            </div>
+            <div class="col-2">
+                <h4 class="titlef">LATEST MOVIE</h4>
+            </div>
+            <div class="col-3">
+                <h3><span class="cine1"></span>ALLEZ <span class="cine2">CINE!</span></h3>
+            </div>
+        </div>
+        <div class='row'>
+            <hr>
+            <div class='span12'></div>
+    </footer>
 
-
-
-
-    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
