--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </div>
             <div class="col-2">
                 <h4 class="titlef">REVIEW MOVIES</h4>
+                <button type="button">Comedy</button> <button type="button">Horror</button> <button type="button">Historical</button> <button type="button">Romantic</button> <button type="button">Love</button> <button type="button">Action</button> <button type="button">Reviews</button> <button type="button">Fantasy</button> <button type="button">Thriller</button> <button type="button">Animation</button> <button type="button">Scifi</button> <button type="button">Mecha</button> <button type="button">Family</button> <button type="button">War</button> <button type="button">Drama</button>
             </div>
             <div class="col-2">
                 <h4 class="titlef">LATEST MOVIE</h4>
