--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </div>
             <div class="col-2">
                 <h4 class="titlef">REVIEW MOVIES</h4>
-                <button type="button">Comedy</button> <button type="button">Horror</button> <button type="button">Historical</button> <button type="button">Romantic</button> <button type="button">Love</button> <button type="button">Action</button> <button type="button">Reviews</button> <button type="button">Fantasy</button> <button type="button">Thriller</button> <button type="button">Animation</button> <button type="button">Scifi</button> <button type="button">Mecha</button> <button type="button">Family</button> <button type="button">War</button> <button type="button">Drama</button>
+                <hr>
+                <a href="#">Comedy</a> <a href="#">Horror</a> <a href="#">Historical</a> <a href="#">Romantic</a> <a href="#">Love</a> <a href="#">Action</a> <a href="#">Reviews</a> <a href="#">Fantasy</a> <a href="#">Thriller</a> <a href="#">Animation</a> <a href="#">Scifi</a> <a href="#">Mecha</a> <a href="#">Family</a> <a href="#">War</a> <a href="#">Drama</a>
             </div>
             <div class="col-2">
                 <h4 class="titlef">LATEST MOVIE</h4>
