--- a/newsletter.html
+++ b/newsletter.html
@@ -9,20 +9,20 @@
 <body>
     <div style="width:600px; margin:auto;">
     <table>
-            <tr><h1 style="background-image:url(https://i.goopics.net/gdgNW.jpg); font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:100px; margin:auto; text-align:center; color:white">
+            <tr><h1 style="background-image:url(https://i.goopics.net/gdgNW.jpg); font-family:Arial; width:600px; height:100px; margin:auto; text-align:center; color:white">
                 <p>ALLEZCINE!</p></h1></tr>
             
             <tr>
-                <h2 style="background-color:red; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:80px; margin:auto; text-align:center; color:white;"><p>Les derniers films à l'affiche</p></h2>
+                <h2 style="background-color: #536177; font-family:Arial; width:600px; height:80px; margin:auto; text-align:center; color:white;"><p>Les derniers films à l'affiche</p></h2>
             </tr>
             <tr>
-                <td style="background-color:white; font-family:Arial; border-style:solid; border-color: black; border-width: 2px; width:150px; height:180px; text-align:center; color:white;">      
+                <td style="background-image:url(https://i.goopics.net/WD0ee.jpg); width:150px; height:220px; text-align:center; color:white;">      
                 </td>
-                <td style="background-color:white; font-family:Arial; border-style:solid; border-color: black; border-width: 2px; width:150px; height:180px; text-align:center; color:white;">      
+                <td style="background-image:url(https://i.goopics.net/nQDbJ.jpg); width:150px; height:180px; text-align:center; color:white;">      
                 </td>
-                <td style="background-color:white; font-family:Arial; border-style:solid; border-color: black; border-width: 2px; width:150px; height:180px; text-align:center; color:white;">      
+                <td style="background-image:url(https://i.goopics.net/Gxae7.jpg); width:150px; height:180px; text-align:center; color:white;">      
                 </td>
-                <td style="background-color:white; font-family:Arial; border-style:solid; border-color: black; border-width: 2px; width:150px; height:180px; text-align:center; color:white;">      
+                <td style="background-image:url(https://i.goopics.net/eX1bW.jpg); width:150px; height:180px; text-align:center; color:white;">      
                 </td>
             </tr>
     </table>
