--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 
 <body>
     <footer>
-        <div class="row align-center">
-
+        <div class="row">
+            <div class="col">
+                <p>Bonjour</p>
+            </div>
         </div>
+
         <div class="row">
             <div class="col-2 offset-1">
                 <h4>RELEASES</h4>
@@ -26,6 +29,7 @@
                 <p>2012</p>
                 <p>2011</p>
             </div>
+
             <div class="col-2">
                 <h4 class="titlef">MOVIES</h4>
                 <hr>
@@ -36,21 +40,41 @@
                 <p>MOVIES</p>
                 <p>HORROR</p>
             </div>
+
             <div class="col-2">
                 <h4 class="titlef">REVIEW MOVIES</h4>
                 <hr>
-                <a href="#">Comedy</a> <a href="#">Horror</a> <a href="#">Historical</a> <a href="#">Romantic</a> <a href="#">Love</a> <a href="#">Action</a> <a href="#">Reviews</a> <a href="#">Fantasy</a> <a href="#">Thriller</a> <a href="#">Animation</a> <a href="#">Scifi</a> <a href="#">Mecha</a> <a href="#">Family</a> <a href="#">War</a> <a href="#">Drama</a>
+                <a href="#">Comedy</a> <a href="#">Horror</a> <a href="#">Historical</a> <a href="#">Romantic</a> <a
+                    href="#">Love</a> <a href="#">Action</a> <a href="#">Reviews</a> <a href="#">Fantasy</a> <a
+                    href="#">Thriller</a> <a href="#">Animation</a> <a href="#">Scifi</a> <a href="#">Mecha</a> <a
+                    href="#">Family</a> <a href="#">War</a> <a href="#">Drama</a>
             </div>
+
             <div class="col-2">
                 <h4 class="titlef">LATEST MOVIE</h4>
+                <hr>
+                <div class="flot">
+                    <img src="https://i.goopics.net/pYVYd.jpg" />
+                    <p>Batman The Dark Knight</p>
+                </div>
+                <div class="flot">
+                    <img src="https://puu.sh/DHzxq/7a71f5ca54.jpg" />
+                    <p>Là-Haut</p>
+                </div>
+                <div class="flot">
+                    <img src="https://puu.sh/DHAz6/bd8e40c361.jpg" />
+                    <p>Le Seigneur des Anneaux - Le retour du roi</p>
+                </div>
+                <div class="flot">
+                    <img src="https://i.goopics.net/pYVYd.jpg" />
+                    <p>Batman The Dark Knight</p>
+                </div>
             </div>
-            <div class="col-3">
+
+            <div class="col-2">
                 <h3><span class="cine1"></span>ALLEZ <span class="cine2">CINE!</span></h3>
             </div>
         </div>
-        <div class='row'>
-            <hr>
-            <div class='span12'></div>
     </footer>
 
     <!-- Optional JavaScript -->
