--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" media="screen" type="text/css" title="style" href="assets/css/style.css"/>
+    <script src="https://kit.fontawesome.com/08a7931cbe.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,6 +13,62 @@
     <title>AllezCine</title>
 </head>
 <body>
+    <header>
+        <div class="carousel slide position-relative" data-ride="carousel">
+            <nav class="position-absolute">
+                <div class="row">
+                    <div class="logo col-3">
+                        <h1><span class="title-red">Allez</span>Cine !</h1>
+                    </div>
+                    <div class="col-3 d-flex drop">
+                        <a class="title-red btn"href="">HOME</a>
+                        <div class="dropdown">
+                            <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                            <div class="dropdown-menu">
+                                <div class="dropdown-item">
+                                    <a href="#">Fuck this shit</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                            <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                            <div class="dropdown-menu">
+                                <div class="dropdown-item">
+                                    <a href="#">Fuck this shit</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                                <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                                <div class="dropdown-menu">
+                                    <div class="dropdown-item">
+                                        <a href="#">Fuck this shit</a>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="col-2">
+                        <a class="nav-link col-8" href="#">CONTACT</a>
+                    </div>
+                    <div class="col-3 search offset-1">
+                        <div class='input-group'>
+                            <input type="text" class="form-control col-10" placeholder="Je suis la recherche">
+                            <div class="input-group-append">
+                                <div class="input-group-text">
+                                    <a href="" class="fa fa-search"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/header/carousel1.jpg" class="d-block w-100" alt="test">
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
