--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,500,900&display=swap" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>AllezCine</title>
 </head>
@@ -17,8 +18,8 @@
         <div class="carousel slide position-relative" data-ride="carousel">
             <nav class="position-absolute">
                 <div class="row">
-                    <div class="logo col-3">
-                        <h1><span class="title-red">Allez</span>Cine !</h1>
+                    <div class="logo col-xl-3">
+                        <h1><span class="title-red">Allez</span>Cine!</h1>
                     </div>
                     <div class="col-3 d-flex drop">
                         <a class="title-red btn"href="">HOME</a>
@@ -65,9 +66,20 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="assets/img/header/carousel1.jpg" class="d-block w-100" alt="test">
+                    <div class="carousel-caption">
+                        <div class="caption-title">
+                            <h2>LASTEST <span class="title-red">ON</span>LINE <span class="title-red">MO</span>VIE</h2>
+                            <p>In space no one can hear you scream</p>
+                        </div>
+                        <a class="btn btn-red" href="#">Watch trailer</a>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="connect d-flex">
+                <p><i class="fas fa-phone-alt"></i>(+000) 009 455 4088</p>
+                <a class="btn btn-black">LOGIN</a>
+                <a class="btn btn-black">REGISTER</a>
+            </div>
     </header>
     <script src="assets/js/script.js"></script>
 </body>
