modification du footer

--- a/newsletter.html
+++ b/newsletter.html
@@ -13,131 +13,158 @@
         <table>
             <tbody>
                 <tr>
-                    <h1 style="background-image:url(https://i.goopics.net/gdgNW.jpg); font-family:Arial; width:600px; height:100px; padding-top: 2%; margin-bottom: 5px; text-align:center; color:white">
-                        <p>ALLEZCINE!</p> </h1>
+                    <h1
+                        style="background-image:url(https://i.goopics.net/gdgNW.jpg); font-family:Arial; width:600px; height:100px; padding-top: 2%; margin-bottom: 5px; text-align:center; color:white">
+                        <p>ALLEZCINE!</p>
+                    </h1>
                 </tr>
                 <tr>
-                    <h2 style="background-color: #536177; font-family:Arial; width:600px; height:80px; margin:auto; padding-top: 2%;text-align:center; color:white; text-shadow: 2px 2px 3px black">
-                        <p>Les derniers films à l'affiche</p> </h2>
+                    <h2
+                        style="background-color: #536177; font-family:Arial; width:600px; height:80px; margin:auto; padding-top: 2%;text-align:center; color:white; text-shadow: 2px 2px 3px black">
+                        <p>Les derniers films à l'affiche</p>
+                    </h2>
                 </tr>
                 <tr>
-                    <td style="background-image:url(https://i.goopics.net/WD0ee.jpg); width:150px; height:220px; text-align:center; color:white;">
+                    <td
+                        style="background-image:url(https://i.goopics.net/WD0ee.jpg); width:150px; height:220px; text-align:center; color:white;">
                     </td>
-                    <td style="background-image:url(https://i.goopics.net/nQDbJ.jpg); width:150px; height:180px; text-align:center; color:white;">
+                    <td
+                        style="background-image:url(https://i.goopics.net/nQDbJ.jpg); width:150px; height:180px; text-align:center; color:white;">
                     </td>
-                    <td style="background-image:url(https://i.goopics.net/Gxae7.jpg); width:150px; height:180px; text-align:center; color:white;">
+                    <td
+                        style="background-image:url(https://i.goopics.net/Gxae7.jpg); width:150px; height:180px; text-align:center; color:white;">
                     </td>
-                    <td style="background-image:url(https://i.goopics.net/eX1bW.jpg); width:150px; height:180px; text-align:center; color:white;">
+                    <td
+                        style="background-image:url(https://i.goopics.net/eX1bW.jpg); width:150px; height:180px; text-align:center; color:white;">
                     </td>
                 </tr>
-            <table>
-                <tbody>
-                    <tr>
-                        <td>
-                            <p style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:80px; margin:auto; text-align:center; color:white;"> hola </p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> <a href="#"> <img src="https://i.goopics.net/7oAjN.jpg" style="font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
-                        </td>
-                        <td style="background-image: url(https://i.goopics.net/AqELw.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
-                        </td>
-                        <td style="background-image: url(https://i.goopics.net/b9Lv0.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
-                        </td>
-                        <td style="background-image: url(https://i.goopics.net/nQDyJ.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <table>
-                <tbody>
-                    <tr>
-                        <td>
-                            <p style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:80px; margin:auto; text-align:center; color:white;"> hey </p>
-                        </td>
-                    </tr>
-                </tbody>
-        </table>
-        <table>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <p
+                                    style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:80px; margin:auto; text-align:center; color:white;">
+                                    hola </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td
+                                style="background-image: url(https://i.goopics.net/7oAjN.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                            </td>
+                            <td
+                                style="background-image: url(https://i.goopics.net/AqELw.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                            </td>
+                            <td
+                                style="background-image: url(https://i.goopics.net/b9Lv0.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                            </td>
+                            <td
+                                style="background-image: url(https://i.goopics.net/nQDyJ.jpg); font-family:Arial; width:150px; height:220px; text-align:center; color:white;">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <p
+                                    style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:80px; margin:auto; text-align:center; color:white;">
+                                    hey </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <p
+                                    style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:40px; margin:auto; text-align:center; color:white; font-size:30px;">
+                                    Les promos du passés </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             <tbody>
                 <tr>
-                    <td>
-                        <p
-                        style="background-color:#536177; font-family:Arial; border-style:solid; border-width: 2px; width:600px; height:40px; margin:auto; text-align:center; color:white; font-size:30px;">
-                        Les promos du passés </p>
+                    <td style=" align:center; ">
+                        <table style="background-color: black; width:100%;">
+                            <tbody>
+                                <tr>
+                                    <td style="padding-top:10px; padding-bottom:5px; text-align:center;">
+                                        <span
+                                            style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;">
+                                            Rejoignez-nous sur : </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table style="width:100%;">
+                                            <tbody>
+                                                <tr>
+                                                    <td
+                                                        style="padding-right: 0px; padding-left: 0px; width: 100%; text-align: center;">
+                                                        <p> <img class="facebook" src="assets/img/font/Facebook.jpg"
+                                                                style="width: 30px; height: 30px;               border-radius:20px;">
+                                                            <img class="twitter" src="assets/img/font/twitter.jpg"
+                                                                style="width: 30px; height: 30px; border-radius:20px;">
+                                                            <img class="youtube" src="assets/img/font/youtube.jpg"
+                                                                style="width: 30px; height: 30px; border-radius:20px;">
+                                                            <img class="linkedin" src="assets/img/font/linkedin.jpg"
+                                                                style="width: 30px; height: 30px; border-radius:20px;">
+                                                            <img class="google+" src="assets/img/font/google+.jpg"
+                                                                style="width: 30px; height: 30px; border-radius:20px;">
+                                                        </p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <table style="width:100%;">
+                                            <tbody>
+                                                <tr>
+                                                    <td style="padding-top:5px; text-align:center;">
+                                                        <span
+                                                            style="font-family: Arial; font-size: 20px; letter-spacing: 1; color: #ff4140;">Une
+                                                            question ? </span>
+                                                        <span
+                                                            style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;">Remplissez
+                                                            notre formulaire de contact sur notre site.</span>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <table style="width: 100%;">
+                                            <tbody>
+                                                <tr>
+                                                    <td style="padding-right: 0px; padding-left: 0px; width: 100%;
+                                                text-align: center;">
+                                                        <p> <a href="#" style="color:#0d76bd; text-decoration: none;">
+                                                                Mention légal</a>
+                                                            <a href="#"
+                                                                style="color:#0d76bd; margin-left:50px; text-decoration: none;">
+                                                                Sécurité </a> </p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <table style="width: 100%;">
+                                            <tbody>
+                                                <tr>
+                                                    <td style="padding-bottom: 5px; padding-right: 0px; padding-left: 0px; width: 100%;
+                                                text-align: center;">
+                                                        <a href="#" style="color:cyan; text-decoration: none;"> Se
+                                                            désabonner de la Newsletter </a>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </td>
                 </tr>
             </tbody>
-        </table>
-        <tbody>
-            <tr>
-                <td style=" align:center; ">
-                    <table style="background-color: black; width:100%;">
-                        <tbody>
-                            <tr>
-                                <td style="padding-top:10px; padding-bottom:5px; text-align:center;">
-                                    <span style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;">
-                                        Rejoignez-nous sur : </span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <table style="width:100%;">
-                                        <tbody>
-                                            <tr>
-                                                <td style="padding-right: 0px; padding-left: 0px; width: 100%;
-                                                text-align: center;">
-                                                    <p> <a href="#"> <img class="facebook" src="assets/images/font/Facebook.jpg" style="width: 30px; height: 30px; border-radius:20px;"> </a>
-                                                    <a href="#"> <img class="twitter" src="assets/images/font/twitter.jpg" style="width: 30px; height: 30px; border-radius:20px;"> </a>
-                                                    <a href="#"> <img class="youtube" src="assets/images/font/youtube.jpg" style="width: 30px; height: 30px; border-radius:20px;"> </a>
-                                                    <a href="#"> <img class="linkedin" src="assets/images/font/linkedin.jpg" style="width: 30px; height: 30px; border-radius:20px;"> </a>
-                                                    <a href="#"> <img class="google+" src="assets/images/font/google+.jpg" style="width: 30px; height: 30px; border-radius:20px;"> </a> </p>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                    <table style="width:100%;">
-                                        <tbody>
-                                            <tr>
-                                                <td style="padding-top:5px; text-align:center;">
-                                                    <span
-                                                        style="font-family: Arial; font-size: 20px; letter-spacing: 1; color: #ff4140;">Une
-                                                        question ? </span>
-                                                    <span
-                                                        style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;">Remplissez
-                                                        notre formulaire de contact sur notre site.</span>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                    <table style="width: 100%;">
-                                        <tbody>
-                                            <tr>
-                                                <td style="padding-right: 0px; padding-left: 0px; width: 100%;
-                                                text-align: center;">
-                                                    <p> <a href="#" style="color:#0d76bd; text-decoration: none;"> Mention légal</a>
-                                                    <a href="#" style="color:#0d76bd; margin-left:50px; text-decoration: none;"> Sécurité </a> </p>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                    <table style="width: 100%;">
-                                        <tbody>
-                                            <tr>
-                                                <td style="padding-bottom: 5px; padding-right: 0px; padding-left: 0px; width: 100%;
-                                                text-align: center;">
-                                                    <a href="#" style="color:cyan; text-decoration: none;"> Se désabonner de la Newsletter </a> 
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </td>
-            </tr>
-        </tbody>
         </table>
     </div>
 </body>
