exo footer suite

--- a/index.html
+++ b/index.html
@@ -13,68 +13,171 @@
 <body>
     <footer>
         <div class="row">
-            <div class="col">
-                <p>Bonjour</p>
+            <div class="col text-center">
+                <h2 class="suscribe">SUBSCRIBE TO US</h2>
             </div>
         </div>
-
-        <div class="row">
+        <div class="row d-flex justify-content-center">
+            <div class="col-4">
+                <form>
+                    <div class="form-group">
+                    <input type="email" class="form-control" id="formail" placeholder="Enter your email...">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- Lisibilité  html-->
+        <div class=" tableau row">
             <div class="col-2 offset-1">
                 <h4>RELEASES</h4>
-                <hr>
-                <p>2016</p>
-                <p>2015</p>
-                <p>2014</p>
-                <p>2013</p>
-                <p>2012</p>
-                <p>2011</p>
+                <table class="table">
+                    <tr>
+                        <th><!-- White line--></th>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td><p><a class="releases" href="#">2019</a></p></td>
+                    </tr>
+                    <tr>
+                        <td><p><a class="releases" href="#">2018</a></p></td>
+                    </tr>
+                    <tr>
+                        <td><p><a class="releases" href="#">2017</a></p></td>
+                    </tr>
+                    <tr>
+                        <td><p><a class="releases" href="#">2016</a></p></td>
+                    </tr>
+                    <tr>
+                        <td><p><a class="releases" href="#">2015</a></p></td>
+                    </tr>
+                    <tr>
+                        <td><p><a class="releases" href="#">2014</a></p></td>
+                    </tr>
+                </table>
             </div>
-
+            <!-- Lisibilité  html-->
             <div class="col-2">
                 <h4 class="titlef">MOVIES</h4>
-                <hr>
-                <p>ADVENTURE</p>
-                <p>COMEDY</p>
-                <p>FANTASY</p>
-                <p>ACTION</p>
-                <p>MOVIES</p>
-                <p>HORROR</p>
+                <table class="table">
+                    <tr>
+                        <th><!-- White line--></th>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td>
+                            <p><a class="movies" href="#">ADVENTURE</a></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><a class="movies" href="#">COMEDY</a></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><a class="movies" href="#">FANTASY</a></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><a class="movies" href="#">ACTION</a></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><a class="movies" href="#">ANIMATION</a></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p><a class="movies" href="#">HORROR</a></p>
+                        </td>
+                    </tr>
+                </table>
             </div>
-
+            <!-- Lisibilité  html-->
             <div class="col-2">
                 <h4 class="titlef">REVIEW MOVIES</h4>
-                <hr>
-                <a href="#">Comedy</a> <a href="#">Horror</a> <a href="#">Historical</a> <a href="#">Romantic</a> <a
-                    href="#">Love</a> <a href="#">Action</a> <a href="#">Reviews</a> <a href="#">Fantasy</a> <a
-                    href="#">Thriller</a> <a href="#">Animation</a> <a href="#">Scifi</a> <a href="#">Mecha</a> <a
-                    href="#">Family</a> <a href="#">War</a> <a href="#">Drama</a>
+                <table class="table">
+                    <tr>
+                        <th><!-- White line--></th>
+                    </tr>
+                </table>
+                <a class="btag" href="#">Comedy</a> <a class="btag" href="#">Horror</a> <a class="btag"
+                    href="#">Historical</a> <a class="btag" href="#">Romantic</a> <a class="btag" href="#">Love</a> <a
+                    class="btag" href="#">Action</a> <a class="btag" href="#">Reviews</a> <a class="btag"
+                    href="#">Fantasy</a> <a class="btag" href="#">Thriller</a> <a class="btag" href="#">Animation</a> <a
+                    class="btag" href="#">Scifi</a> <a class="btag" href="#">Mecha</a> <a class="btag" href="#">Family</a> <a class="btag"
+                    href="#">War</a> <a class="btag" href="#">Drama</a>
             </div>
-
+            <!-- Lisibilité  html-->
             <div class="col-2">
                 <h4 class="titlef">LATEST MOVIE</h4>
-                <hr>
-                <div class="flot">
-                    <img src="https://i.goopics.net/pYVYd.jpg" />
-                    <p>Batman The Dark Knight</p>
-                </div>
-                <div class="flot">
-                    <img src="https://puu.sh/DHzxq/7a71f5ca54.jpg" />
-                    <p>Là-Haut</p>
-                </div>
-                <div class="flot">
-                    <img src="https://puu.sh/DHAz6/bd8e40c361.jpg" />
-                    <p>Le Seigneur des Anneaux - Le retour du roi</p>
-                </div>
-                <div class="flot">
-                    <img src="https://i.goopics.net/pYVYd.jpg" />
-                    <p>Batman The Dark Knight</p>
-                </div>
+                <table class="table">
+                    <tr>
+                        <th><!-- White line--></th>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td>
+                            <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
+                        </td>
+                        <td>
+                            <p>Batman The Dark Knight</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img class="img1" src="https://puu.sh/DHzxq/7a71f5ca54.jpg" />
+                        </td>
+                        <td>
+                            <p>Là-Haut</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img class="img1" src="https://puu.sh/DHAz6/bd8e40c361.jpg" />
+                        </td>
+                        <td>
+                            <p>L.O.T.H.R. - The King Return</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
+                        </td>
+                        <td>
+                            <p>Batman The Dark Knight</p>
+                        </td>
+                    </tr>
+                </table>
             </div>
-
+            <!-- Lisibilité  html-->
             <div class="col-2">
-                <h3><span class="cine1"></span>ALLEZ <span class="cine2">CINE!</span></h3>
+                <h4><span class="cine1"></span>ALLEZ <span class="cine2">CINE!</span></h4>
+                <table class="table">
+                    <tr>
+                        <th><!-- White line--></th>
+                    </tr>
+                </table>
+                <tr>
+                    <td><img class="img2" src="https://puu.sh/DHWg0/fdd48a35f3.jpg" /><img class="img2" src="https://puu.sh/DHWek/c2735e1623.jpg" /><img class="img2" src="https://puu.sh/DHVoB/260bd4b887.jpg" /></td>
+                    <td><img class="img2" src="https://puu.sh/DHWnl/6c90382cd6.jpg" /><img class="img2" src="https://puu.sh/DHWin/412d3a6aa7.jpg" /><img class="img2" src="https://puu.sh/DHWkk/245c1b33e2.jpg" /></td>
+                </tr>
             </div>
         </div>
+        <!-- Lisibilité  html-->
+        <hr class="hrespace">
+        <!-- Lisibilité  html-->
+        <div class="row">
+            <div class="col text-center">
+                <h2>SUBSCRIBE TO US</h2>
+            </div>
+        </div>
+
     </footer>
 
     <!-- Optional JavaScript -->
